# fastapi-messenger

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: README.md
app/client/html/: chat.html  login.html  register.html
app/client/scripts/: chat.js  login.js  register.js  script.js
app/html/: chat.html  login.html
app/scripts/: script.js
app/server/: main.py  seed.py
app/server/api/v1/: router.py
app/server/api/v1/endpoints/: auth.py  channels.py  messages.py
app/server/core/: config.py
app/server/db/: database.py
app/server/models/: channel.py
app/server/schemas/: channel.py  message.py  user.py
app/styles/: style.css
docker_compose/: app.yaml  storages.yaml
